_sass/_main.scss
/* ... */
#what-made {
  padding: 70px 20px;
  text-align: center;

  h1 {
    font-size: 40px;
    color: #5D6570;
  }

  figure {
    margin: 130px 0;

    img {
      width: 180px;
      margin-bottom: 30px;
    }

    h1 {
      color: #484848;
      font-size: 25px;
    }

    p {
      font-size: 14px;
      font-family: 'Open Sans', sans-serif;
      color: #7D7D7D;
      line-height: 33px;
    }
  }

  .button {
    border-radius: 3px;
    color: #fff;
    background: #79BAD9;
    padding: 9px 18px;
    display: inline-block;
  }

  @media (min-width: 768px) {
    figure {
      margin: 50px 0;
      width: 45%;
      box-sizing: border-box;
      padding: 0 30px;
      display: inline-block;
    }

    .container > h1 {
      font-size: 50px;
    }

    .button {
      margin-top: 30px;
      padding: 15px 28px;
    }
  }

  @media (min-width: 992px) {
    figure {
      width: 33.333333%;
      float: left;
    }

    .container {
      width: 940px;
      margin: 0 auto;
    }
  }
}

#didnt-notice {
  color: #fff;
  padding: 50px 20px 750px;
  background: #B9CFE4 url(/assets/images/intro-sm.png) no-repeat center bottom;

  h1 {
    font-size: 40px;
    line-height: 56px;
    text-align: center;
    margin: 0 0 50px 0;
  }

  p {
    font-size: 16px;
    line-height: 33px;
    font-family: 'Open Sans', sans-serif;
    margin-bottom: 50px;
  }

  @media (min-width: 768px) {
    text-align: center;
    padding-bottom: 800px;

    h1 {
      font-size: 50px;
      margin-top: 60px;
    }

    p {
      font-size: 22px;
      line-height: 40px;
    }
  }

  @media (min-width: 992px) {
    background-image: url(/assets/images/intro-lg.png);
    background-size: 100% auto;
    padding-bottom: 55%;

    .container {
      width: 730px;
      margin: 0 auto;
    }
  }
}

#ready-to-start {
  text-align: center;
  padding: 80px 0;

  h1 {
    color: #5D6570;
    font-size: 40px;
    margin-bottom: 50px;
  }

  figure {
    margin-bottom: 80px;

    img {
      border: 5px solid #fff;
      max-width: 80%;
      display: block;
      margin: 0 auto;
    }

    figcaption {
      color: #7D7D7D;
      font-size: 14px;
      font-family: 'Open Sans', sans-serif;
      margin-top: 20px;
    }
  }

  .more {
    font-size: 18px;
    font-family: 'Open Sans', sans-serif;
    line-height: 29px;
    margin-bottom: 80px;
    color: #7D7D7D;
  }

  .button {
    color: #fff;
    background: #F28282;
    border-radius: 3px;
    padding: 8px 21px;
  }

  @media (min-width: 768px) {
    figure {
      width: 40%;
      display: inline-block;
      margin: 40px 0;
      box-sizing: border-box;
    }

    .button {
      padding: 15px 28px;
      margin-top: 50px;
      display: inline-block;
    }

    .more {
      font-size: 22px;
      line-height: 40px;
      max-width: 730px;
      margin-left: auto;
      margin-right: auto;
    }
  }

  @media (min-width: 992px) {
    figure {
      width: 33.3333333%;
      float: left;
    }

    .container {
      width: 940px;
      margin: 0 auto;

      &:before {
        content: '';
        clear: both;
        display: block;
      }
    }

    .more {
      display: block;
      margin-top: 70px;
      margin-bottom: 0;
    }
  }
}

#more-questions {
  background: #DBDFE1;
  padding: 50px;
  text-align: center;
  color: #5D6570;

  p {
    margin: 0 auto;
    font-size: 20px;
    line-height: 35px;

    a {
      color: #6A90C1;
    }
  }

  @media (min-width: 768px) {
    font-size: 30px;
    line-height: normal;
  }
}

#intro-red {
  color: #fff;
  padding: 70px 20px 60%;
  background: #F28282 url(/assets/images/machines-overview-sm.png) no-repeat center bottom 30px;
  background-size: 100% auto;

  h1 {
    font-size: 30px;
    line-height: 45px;
  }

  p {
    font-family: 'Open Sans', sans-serif;
    font-size: 16px;
  }

  @media (min-width: 768px) {
    background-image: url(/assets/images/machines-overview-lg.png);

    h1 {
      font-size: 50px;
      line-height: 75px;
    }

    p {
      font-size: 22px;
    }
  }

  @media (min-width: 992px) {
    background: #FCFCFE url(/assets/images/intro-colored.png) no-repeat center bottom;
    background-size: 100% auto;
    height: 100%;
    padding-bottom: 0;
    box-sizing: border-box;
    padding-top: 150px;

    h1, p {
      color: #5D6570;
      max-width: 680px;
    }

    h1 {
      font-size: 40px;
      line-height: 1.4em;
    }

    .container {
      width: 940px;
      margin-left: auto;
      margin-right: auto;
    }
  }
}
/* ... */

